--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,6 @@
             <ul class="list-unstyled  mb-0">
               <li><a href="/our-solutions">Solutions</a></li>
               <li><a href="/supported-technologies">Technologies</a></li>
-              <li><a href="/case-studies">Case Studies</a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -37,9 +36,9 @@
           <div class="widget">
             <h4 class="widget-title text-white mb-3">Contact Us</h4>
             <p class="mb-2">Calle Juan Urbieta, 16, 1ºA, 28007, Madrid - Spain.</p>
-            <p class="mb-2"><strong>Email:</strong> <u><a href="mailto:holler@axops.tech">holler@axops.tech</a></u></p>
+            <p class="mb-2"><a href="/about-us/contact">&#128073;<u><strong>&nbsp;Write to us here&nbsp;</strong></u>&#128072;</a></p>
             <nav class="nav social social-white">
-              <a href="#"><i class="uil uil-linkedin"></i></a>
+              <a href="https://www.linkedin.com/company/axops/" target="_blank"><i class="uil uil-linkedin"></i></a>
               <!-- <a href="#"><i class="uil uil-youtube"></i></a> -->
             </nav>
             <!-- /.social -->
