updated cta buttons: anchored to contact form

--- a/_layouts/technology.html
+++ b/_layouts/technology.html
@@ -54,7 +54,7 @@
               <!--/column -->
             </div>
             <!--/.row -->
-            <a href="#" class="btn btn-primary rounded-pill mt-6 mb-0">Need {{ p[1].title }} Support? Get In Touch!</a>
+            <a href="#contact" class="btn btn-primary rounded-pill mt-6 mb-0">Need {{ p[1].title }} Support? Get In Touch!</a>
           </div>
           <!--/column -->
         </div>
@@ -69,6 +69,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
+    <a name="contact" style="visibility: hidden;"></a>
     {% include contact-form.html %}
 </div>
 <!-- /.content-wrapper -->
