--- a/_layouts/training.html
+++ b/_layouts/training.html
@@ -54,7 +54,7 @@
               <!--/column -->
             </div>
             <!--/.row -->
-            <a href="#" class="btn btn-primary rounded-pill mt-6 mb-0">Schedule Training Sessions Here</a>
+            <a href="#schedule" class="btn btn-primary rounded-pill mt-6 mb-0">Schedule Training Sessions Here</a>
           </div>
           <!--/column -->
         </div>
@@ -69,6 +69,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
+    <a name="schedule" style="visibility: hidden;"></a>
     {% include contact-form.html %}
 </div>
 <!-- /.content-wrapper -->
