--- a/_layouts/technology.html
+++ b/_layouts/technology.html
@@ -54,7 +54,7 @@
               <!--/column -->
             </div>
             <!--/.row -->
-            <a href="#contact" class="btn btn-primary rounded-pill mt-6 mb-0">Get {{ p[1].title }} Support</a>
+            <a href="#contact" class="btn btn-primary rounded-pill mt-6 mb-0">Request {{ p[1].title }} Support</a>
           </div>
           <!--/column -->
         </div>
