--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -2,7 +2,7 @@
     <div class="container py-14 py-md-12">
       <div class="row">
         <div class="text-center col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-            <h3 class="display-4 mb-9 px-xl-11">Submit the form below; expect our response within 1 business day 🎯</h3>
+            <h3 class="display-4 mb-9 px-xl-11">Submit the form below; expect a reply within 1 business day 🎯</h3>
         </div>
         <div class="col-xl-10 mx-auto">
           <div class="row gy-10 gx-lg-8 gx-xl-12">
