--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -1,6 +1,7 @@
 {% assign content_config = site.data.content.config %}
 {% assign current_page = site.data.pageconfig %}
 {% assign config = current_page.index %}
+{% if config.mode == "live" %}
   <header class="wrapper bg-soft-primary">
     <nav class="navbar navbar-expand-lg classic transparent navbar-light">
       <div class="container flex-lg-row flex-nowrap align-items-center">
@@ -132,3 +133,4 @@
     <!-- /.navbar -->
   </header>
   <!-- /header -->
+{% endif %}
