--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+  {% if config.mode == "live" %}
   <footer class="bg-dark text-inverse">
     <div class="container py-13 py-md-15">
       <div class="row gy-6 gy-lg-0">
@@ -51,6 +52,7 @@
     </div>
     <!-- /.container -->
   </footer>
+  {% endif %}
   <div class="progress-wrap">
     <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
       <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
