--- a/_layouts/solution-2.html
+++ b/_layouts/solution-2.html
@@ -4,6 +4,7 @@
 {% include header_site.html %}
 <!-- /header -->
 
+{% assign mainconfig = site.data.pageconfig.our-solutions %}
 {% assign pageconfig = site.data.pageconfig.solutions.pages | map: page.name | first %}
 
 <div class="content-wrapper">
@@ -14,7 +15,7 @@
           <div class="col-lg-6 position-relative">
             <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="top: -2rem; right: -0.6rem;"></div>
             <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="bottom: -2rem; left: -0.4rem;"></div>
-            <figure class="rounded mb-0"><img src="{{ site.url }}{{ pageconfig.main_image }}" srcset="{{ site.url }}{{ pageconfig.main_image }} 2x" alt=""></figure>
+            <figure class="rounded mb-0"><img src="{{ pageconfig.main_image }}" srcset="{{ site.url }}{{ pageconfig.main_image }} 2x" alt=""></figure>
           </div>
           <!--/column -->
           <div class="col-lg-6">
