--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -21,7 +21,8 @@
                 {% if item.enabled %}
                   {% assign item_url = item.url %}
                   {% if item.is_mega_dropdown %}
-                  <li class="nav-item dropdown dropdown-mega"><a class="nav-link dropdown-toggle" href="{{ item.url }}" data-bs-toggle="">{{ item.name }}</a>
+                  <!-- <li class="nav-item dropdown dropdown-mega"><a class="nav-link dropdown-toggle" href="{{ item.url }}" data-bs-toggle="">{{ item.name }}</a> -->
+                  <li class="nav-item dropdown dropdown-mega"><a class="nav-link dropdown-toggle" href="" data-bs-toggle="">{{ item.name }}</a>
                     <ul class="dropdown-menu mega-menu">
                       <li class="mega-menu-content">
                         <div class="row gx-0 gx-lg-3">
