--- a/_layouts/technology.html
+++ b/_layouts/technology.html
@@ -13,7 +13,7 @@
       <div class="container py-14 py-md-16">
         <div class="row text-center">
           <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-            <h2 class="fs-15 text-uppercase text-muted mb-3"><a href="{{ site.url }}">HOME</a> >> <a href="{{ site.url }}/{{ mainconfig.tagline_href }}">TECHNOLOGIES</a> >> {{ pageconfig.title }}</h2>
+            <h2 class="fs-15 text-uppercase text-muted mb-3"><a href="{{ site.url }}">HOME</a> > <a href="{{ site.url }}/{{ mainconfig.tagline_href }}">TECHNOLOGIES</a> > {{ pageconfig.title }}</h2>
             <h3 class="display-4 mb-9 px-xl-11">{{ pageconfig.tagline }}</h3>
             <h2 class="fs-15 text-uppercase text-muted mb-12">See below for the specific {{ pageconfig.title }} domains we support</h2>
             <hr />
