--- a/_layouts/solution-2.html
+++ b/_layouts/solution-2.html
@@ -11,6 +11,14 @@
     <!-- .content-wrapper -->
     <section class="wrapper bg-light wrapper-border">
       <div class="container py-14 py-md-16">
+        <div class="row text-center">
+          <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+            <h2 class="fs-15 text-uppercase text-muted mb-3"><a href="{{ site.url }}">HOME</a> > <a href="{{ site.url }}{{ mainconfig.tagline_href }}">{{ mainconfig.tagline_here }}</a> > <a href="{{ site.url }}{{ mainconfig.tagline_href }}{{ pageconfig.tagline_href }}">{{ pageconfig.tagline_text }}</a> > {{ pageconfig.title }}</h2>
+            <br /><br /><br />
+          </div>
+          <!-- /column -->
+        </div>
+        <!-- /.row -->
         <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-0 align-items-center">
           <div class="col-lg-6 position-relative">
             <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="top: -2rem; right: -0.6rem;"></div>
