misc. updates to navigation, yaml + text

--- a/_includes/solution-process.html
+++ b/_includes/solution-process.html
@@ -1,7 +1,7 @@
 <section class="wrapper bg-light wrapper-border">
   <div class="container py-14 py-md-12">
     <h2 class="display-4 mb-3 text-center">Prepare for Success &#128640;</h2>
-    <p class="lead fs-lg mb-8 text-center">A well-executed strategy requires thorough preparation. It's why we make absolutely sure that all decision makers and stakeholders are on the same page from the outset. Confidently embark on a smooth, <span class="underline">stress-free</span> journey with <strong>AxOps&#8482; &#128077;</strong>.</p>
+    <p class="lead fs-lg mb-8 text-center">A well-executed strategy requires thorough preparation. It's why we make absolutely sure that all decision makers and stakeholders are on the same page from the outset. Confidently embark on a smooth, <span class="underline">stress-free</span> journey with <strong>AxOps&#8482;</strong>.</p>
     <p class="mb-8 text-center">Our proven <span class="underline-3 style-2 blue">4-Phase</span> approach to project management starts with a <span class="underline-3 style-2 green">Discovery Day</span> that allows us to gain a deep understanding of your business goals and obstacles. Through our <span class="underline-2 style-2 yellow">Research and Design</span> phase, we ensure a focused and cost-effective engagement, avoiding scope creep and unnecessary expenditure.</p>
     <div class="row gx-lg-8 gx-xl-12 gy-6 process-wrapper line text-center">
       <div class="col-md-6 col-lg-3"> <span class="icon btn btn-circle btn-lg btn-primary pe-none mb-4"><span class="number">01</span></span>
