--- a/_layouts/solution-2.html
+++ b/_layouts/solution-2.html
@@ -59,8 +59,8 @@
     <!-- /section -->
     <section class="wrapper bg-light wrapper-border">
         <div class="container py-14 py-md-12">
-          <h2 class="display-4 mb-3 text-center">Why choose {{ site.data.content.config.name }} as your {{ pageconfig.title }} partner? &#129309;</h2>
-          <p class="lead text-center mb-10 px-md-16 px-lg-0">We leverage our experience in the industry to help you both <span class="underline-3 style-2 yellow">navigate</span> <strong>and</strong> <span class="underline-3 style-2 blue">overcome</span> challenges <span class="underline-3 style-2 green">cost-effectively</span> 🎯</p>
+          <h2 class="display-4 mb-3 text-center">Why choose {{ site.data.content.config.name }} as your {{ pageconfig.title }} partner?</h2>
+          <p class="lead text-center mb-10 px-md-16 px-lg-0">We leverage our experience in the industry to help you both <span class="underline-3 style-2 yellow">navigate</span> <strong>and</strong> <span class="underline-3 style-2 blue">overcome</span> challenges <span class="underline-3 style-2 green">cost-effectively</span>.</p>
           <div class="row text-center">
             <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
               <h3 class="display-6 mb-9 px-xl-11">Clients often experience the following <span class="underline-3 style-2 red">problems</span>:</h3>
@@ -121,7 +121,7 @@
           <!--/.row -->
           <div class="row mt-8 mt-md-12">
             <div class="col-md-10 offset-md-1 text-justify">
-              <h2 class="display-4 mb-9 px-xl-11 text-center"><span class="underline-3 style-2 green">Your Solution</span>: Partnering with the {{ site.data.content.config.name }} Team &#128588;</h2>
+              <h2 class="display-4 mb-9 px-xl-11 text-center"><span class="underline-3 style-2 green">Your Solution</span>: Partnering with the {{ site.data.content.config.name }} Team!</h2>
               {{ pageconfig.pitch }}
             </div>
             <!-- /column -->
