minor remaining updates since last commit

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,6 +1,6 @@
 <section class="wrapper bg-light">
     <div class="container py-14 py-md-12">
-      <div class="row">
+      <div class="row" data-cues="slideInDown" data-group="page-title" data-delay="100">
         <div class="text-center col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             <h3 class="display-4 mb-9 px-xl-11">Submit the form below; expect a reply within 1 business day 🎯</h3>
         </div>
