fixed header title metadata to render page title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="author" content="elemis">
-  <title>{{ site.title }}</title>
+  <!-- <title>{{ page.title }} | {{ site.title }}</title> -->
   <link rel="shortcut icon" href="{{ site.favicon }}">
   <link rel="stylesheet" href="{{ site.url }}/assets/css/plugins.css">
   <link rel="stylesheet" href="{{ site.url }}/assets/css/style.css">
