--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,9 +37,9 @@
           <div class="widget">
             <h4 class="widget-title text-white mb-3">Contact Us</h4>
             <p class="mb-2">Calle Juan Urbieta, 16, 1ºA, 28007, Madrid - Spain.</p>
-            <p class="mb-2"><a href="/about-us/contact">&#128073;<u><strong>&nbsp;Write to us here&nbsp;</strong></u>&#128072;</a></p>
+            <p class="mb-2"><a href="/about-us/contact">&#128073;<u><strong>&nbsp;Book a free consultation here&nbsp;</strong></u>&#128072;</a></p>
             <nav class="nav social social-white">
-              <a href="https://www.linkedin.com/company/axops/" target="_blank"><i class="uil uil-linkedin"></i></a>
+              <a href="https://www.linkedin.com/company/axops/" target="_blank"><i class="uil uil-linkedin"></i> Follow AxOps&#8482; on LinkedIn</a>
               <!-- <a href="#"><i class="uil uil-youtube"></i></a> -->
             </nav>
             <!-- /.social -->
