updated cookiebot script in page headers

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
   <!-- End Google Tag Manager -->
 
   <!-- Begin: CookieBot: Banner Script -->
-  <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="3f731cd7-57dc-4e2f-b612-24a4cbaf3c8d" data-blockingmode="auto" type="text/javascript"></script> -->
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="3f731cd7-57dc-4e2f-b612-24a4cbaf3c8d" data-blockingmode="auto" type="text/javascript"></script>
   <!-- End: CookieBot: Banner Script -->
 </head>
 
