updated contact nav yaml + added card elements

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -4,8 +4,8 @@
         <div class="text-center col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             <h3 class="display-4 mb-9 px-xl-11">Book a free consultation; expect a reply within 1 business day 🎯</h3>
         </div>
-        <div class="col-xl-10 mx-auto">
-          <div class="row gy-10 gx-lg-8 gx-xl-12">
+        <div class="card col-xl-10 mx-auto">
+          <div class="row card-body gy-10 gx-lg-8 gx-xl-12">
             <div class="col-lg-12">
               <form id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate needs-validation" method="post" action="https://tech.us17.list-manage.com/subscribe/post?u=14840a8116fc972efb3519035&amp;id=375c5195d2&amp;v_id=4165&amp;f_id=005e57e0f0" novalidate>
                 <div class="messages"></div>
