--- a/_layouts/solution-2.html
+++ b/_layouts/solution-2.html
@@ -119,8 +119,8 @@
             <!--/column -->
           </div>
           <!--/.row -->
-          <div class="row mt-8 mt-md-12">
-            <div class="col-md-10 offset-md-1 text-justify">
+          <div class="card row mt-8 mt-md-12">
+            <div class="card-body col-md-10 offset-md-1 text-justify">
               <h2 class="display-4 mb-9 px-xl-11 text-center"><span class="underline-3 style-2 green">Your Solution</span>: Partnering with the {{ site.data.content.config.name }} Team!</h2>
               {{ pageconfig.pitch }}
             </div>
