--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -119,6 +119,9 @@
         <!-- /.navbar-collapse -->
         <div class="navbar-other ms-lg-4">
           <ul class="navbar-nav flex-row align-items-center ms-auto">
+            <li class="nav-item d-none d-md-block">
+              <a href="{{ site.url }}/about-us/contact" class="btn btn-sm btn-primary rounded-pill">Contact Us</a>
+            </li>
             <li class="nav-item d-lg-none">
               <button class="hamburger offcanvas-nav-btn"><span></span></button>
             </li>
