--- a/_layouts/solution-2.html
+++ b/_layouts/solution-2.html
@@ -21,8 +21,8 @@
         <!-- /.row -->
         <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-0 align-items-center">
           <div class="col-lg-6 position-relative">
-            <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="top: -2rem; right: -0.6rem;"></div>
-            <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="bottom: -2rem; left: -0.4rem;"></div>
+            <!-- <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="top: -2rem; right: -0.6rem;"></div>
+            <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="bottom: -2rem; left: -0.4rem;"></div> -->
             <figure class="rounded mb-0"><img src="{{ pageconfig.main_image }}" srcset="{{ site.url }}{{ pageconfig.main_image }} 2x" alt=""></figure>
           </div>
           <!--/column -->
