--- a/_layouts/training.html
+++ b/_layouts/training.html
@@ -30,8 +30,8 @@
           {% else %}
           <div class="col-lg-6 position-relative">
           {% endif %}
-            <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="top: -2rem; right: -0.6rem;"></div>
-            <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="bottom: -2rem; left: -0.4rem;"></div>
+            <!-- <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="top: -2rem; right: -0.6rem;"></div>
+            <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="bottom: -2rem; left: -0.4rem;"></div> -->
             <figure class="rounded mb-0"><img src="{{ site.url }}/assets/img/illustrations/training/{{ p[0] }}.jpg" srcset="{{ site.url }}/assets/img/illustrations/training/{{ p[0] }}.jpg 2x" alt=""></figure>
           </div>
           <!--/column -->
