updated case study yaml + layout

--- a/_layouts/case-study.html
+++ b/_layouts/case-study.html
@@ -35,6 +35,10 @@
             <div class="col-lg-8">
                 <h3 class="display-5 mb-7">Project Background</h3>
                 <p class="mb-5">{{ pageconfig.challenges }}</p>
+                <p>
+                    <div class="post-category text-line text-green">INDUSTRY: {{ pageconfig.industry }}</div><br />
+                    <div class="post-category text-line text-blue">SERVICE: {{ pageconfig.service }}</div>
+                </p>
             </div>
             <!--/column -->
           </div>
