minor edits to case study paragraph css

--- a/_layouts/case-study.html
+++ b/_layouts/case-study.html
@@ -48,7 +48,7 @@
             <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center" data-cues="slideInDown" data-group="page-title" data-delay="10">
                 <div class="col-lg-4 position-relative text-center">
                     <figure class="rounded mb-0">
-                        <h3 class="display-5 mb-7">Research & Development</h3>
+                        <h3 class="display-5 mb-0">Research & Development</h3>
                     </figure>
                 </div>
                 <!--/column -->
@@ -63,7 +63,7 @@
             <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center" data-cues="slideInDown" data-group="page-title" data-delay="10">
                 <div class="col-lg-4 position-relative text-center">
                     <figure class="rounded mb-0">
-                        <h3 class="display-5 mb-7">Architecture</h3>
+                        <h3 class="display-5 mb-0">Architecture</h3>
                     </figure>
                 </div>
                 <!--/column -->
@@ -93,7 +93,7 @@
             <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center" data-cues="slideInDown" data-group="page-title" data-delay="10">
                 <div class="col-lg-4 position-relative text-center">
                     <figure class="rounded mb-0">
-                        <h3 class="display-5 mb-7">Conclusion</h3>
+                        <h3 class="display-5 mb-0">Conclusion</h3>
                     </figure>
                 </div>
                 <!--/column -->
@@ -108,6 +108,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
+    {% include contact-form.html %}
   </div>
   <!-- /.content-wrapper -->
 
