--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
           <div class="widget">
             <h4 class="widget-title text-white mb-3">What We Do</h4>
             <ul class="list-unstyled  mb-0">
-              <li><a href="/our-solutions">Solutions</a></li>
+              <li><a href="/solutions">Solutions</a></li>
               <li><a href="/supported-technologies">Technologies</a></li>
             </ul>
           </div>
