sanitised technology root links to "technologies"

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
             <h4 class="widget-title text-white mb-3">What We Do</h4>
             <ul class="list-unstyled  mb-0">
               <li><a href="/solutions">Solutions</a></li>
-              <li><a href="/supported-technologies">Technologies</a></li>
+              <li><a href="/technologies">Technologies</a></li>
             </ul>
           </div>
           <!-- /.widget -->
