--- a/_layouts/case-study.html
+++ b/_layouts/case-study.html
@@ -11,7 +11,7 @@
     <section class="wrapper bg-light wrapper-border">
       <div class="container py-14 py-md-16 align-items-center">
         <div class="row mb-3">
-            <div class="col-md-10 col-lg-12 col-xl-10 col-xxl-9 mx-auto text-center" data-cues="slideInDown" data-group="page-title" data-delay="50">
+            <div class="col-md-10 col-lg-12 col-xl-10 col-xxl-9 mx-auto text-center">
                 <h2 class="fs-15 text-uppercase text-muted mb-3"><a href="{{ site.url }}">HOME</a> > <a href="{{ site.url }}/case-studies">CASE STUDIES</a> > YOU ARE HERE</h2>
                 <h3 class="display-4 mb-7 px-lg-19 px-xl-18">{{ pageconfig.title }}</h3>
                 <h2 class="fs-15 text-uppercase text-muted mb-8">{{ pageconfig.subtitle }}</h2>
@@ -27,7 +27,7 @@
         </div>
         <!--/.row -->
         <div class="card" style="margin-bottom: 2em;">
-          <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center" data-cues="slideInDown" data-group="page-title" data-delay="10">
+          <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center">
             <div class="col-lg-4 position-relative">
               <figure class="rounded mb-0"><img class="img-fluid" style="max-width: 400px; max-height: 400px;" src="{{ pageconfig.image_src }}" srcset="{{ pageconfig.image_src }}" alt=""></figure>
             </div>
@@ -45,7 +45,7 @@
         </div>
         <!--/.row -->
         <div class="card" style="margin-bottom: 2em;">
-            <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center" data-cues="slideInDown" data-group="page-title" data-delay="10">
+            <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center">
                 <div class="col-lg-4 position-relative text-center">
                     <figure class="rounded mb-0">
                         <h3 class="display-5 mb-0">Research & Development</h3>
@@ -60,7 +60,7 @@
         </div>
         <!--/.row -->
         <div class="card" style="margin-bottom: 2em;">
-            <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center" data-cues="slideInDown" data-group="page-title" data-delay="10">
+            <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center">
                 <div class="col-lg-4 position-relative text-center">
                     <figure class="rounded mb-0">
                         <h3 class="display-5 mb-0">Architecture</h3>
@@ -75,7 +75,7 @@
         </div>
         <!--/.row -->
         <div class="card" style="margin-bottom: 2em;">
-            <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center" data-cues="slideInDown" data-group="page-title" data-delay="10">
+            <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center">
                 <div class="col-lg-4 position-relative text-center">
                     <figure class="rounded mb-0">
                         <h3 class="display-5 mb-0">Deployment</h3>
@@ -90,7 +90,7 @@
         </div>
         <!--/.row -->
         <div class="card" style="margin-bottom: 2em;">
-            <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center" data-cues="slideInDown" data-group="page-title" data-delay="10">
+            <div class="row card-body gx-lg-8 gx-xl-12 gy-10 mb-4 mb-md-4 align-items-center">
                 <div class="col-lg-4 position-relative text-center">
                     <figure class="rounded mb-0">
                         <h3 class="display-5 mb-0">Conclusion</h3>
