changed infra to services + activated case-studies

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,7 @@
             <ul class="list-unstyled  mb-0">
               <li><a href="/solutions">Solutions</a></li>
               <li><a href="/technologies">Technologies</a></li>
+              <li><a href="/case-studies">Case Studies</a></li>
             </ul>
           </div>
           <!-- /.widget -->
