updated case studies layout+yaml with categories

--- a/_layouts/case-study.html
+++ b/_layouts/case-study.html
@@ -36,8 +36,9 @@
                 <h3 class="display-5 mb-7">Project Background</h3>
                 <p class="mb-5">{{ pageconfig.challenges }}</p>
                 <p>
+                    <div class="post-category text-line text-blue">SERVICE: {{ pageconfig.service }}</div><br />
                     <div class="post-category text-line text-green">INDUSTRY: {{ pageconfig.industry }}</div><br />
-                    <div class="post-category text-line text-blue">SERVICE: {{ pageconfig.service }}</div>
+                    <div class="post-category text-line text-ash">SCALE: {{ pageconfig.scale }}</div>
                 </p>
             </div>
             <!--/column -->
