--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
             <p class="mb-2">Calle Juan Urbieta, 16, 1ºA, 28007, Madrid - Spain.</p>
             <p class="mb-2"><a href="/about-us/contact" class="btn btn-sm btn-primary rounded-pill">Book a Free Consultation</a></p>
             <nav class="nav social social-white">
-              <a href="https://www.linkedin.com/company/axops/" target="_blank"><i class="uil uil-linkedin"></i> Follow AxOps&#8482; on LinkedIn</a>
+              <a href="https://www.linkedin.com/company/axops/" target="_blank"><i class="uil uil-linkedin"></i> Follow AxOps on LinkedIn</a>
               <!-- <a href="#"><i class="uil uil-youtube"></i></a> -->
             </nav>
             <!-- /.social -->
