major update to consolidate solutions + nav items

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,8 +15,9 @@
             <h4 class="widget-title text-white mb-3">What We Do</h4>
             <ul class="list-unstyled  mb-0">
               <li><a href="/solutions">Solutions</a></li>
-              <li><a href="/technologies">Technologies</a></li>
               <li><a href="/case-studies">Case Studies</a></li>
+              <li><a href="/solutions/quantitative-training">Quant R&D Training</a></li>
+              <li><a href="/solutions/technical-training">Technical Training</a></li>
             </ul>
           </div>
           <!-- /.widget -->
