--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,6 +27,7 @@
           <div class="widget">
             <h4 class="widget-title text-white mb-3">Who We Are</h4>
             <ul class="list-unstyled  mb-0">
+              <li><a href="/about-us/meet-the-team">The Team</a></li>
               <li><a href="/about-us/our-vision">Our Vision</a></li>
               <li><a href="/about-us/our-partners">Our Partners</a></li>
             </ul>
