temporarily changed to contact-form-2 pending dev

--- a/_layouts/pattern-library-item.html
+++ b/_layouts/pattern-library-item.html
@@ -141,7 +141,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    {% include contact-form.html %}
+    {% include contact-form-2.html %}
   </div>
   <!-- /.content-wrapper -->
 
