--- a/_layouts/solution-3.html
+++ b/_layouts/solution-3.html
@@ -136,7 +136,7 @@
     </section>
     <!-- /section -->
     {% include solution-process.html %}
-    {% include contact-form.html %}
+    {% include contact-form-2.html %}
 </div>
 <!-- /.content-wrapper -->
 
