--- a/_layouts/case-study.html
+++ b/_layouts/case-study.html
@@ -117,7 +117,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    {% include contact-form.html %}
+    {% include contact-form-2.html %}
   </div>
   <!-- /.content-wrapper -->
 
