--- a/_layouts/technology.html
+++ b/_layouts/technology.html
@@ -73,7 +73,7 @@
     </section>
     <!-- /section -->
     <a name="contact" style="visibility: hidden;"></a>
-    {% include contact-form.html %}
+    {% include contact-form-2.html %}
 </div>
 <!-- /.content-wrapper -->
 
