--- a/_layouts/training.html
+++ b/_layouts/training.html
@@ -71,7 +71,7 @@
     </section>
     <!-- /section -->
     <a name="schedule" style="visibility: hidden;"></a>
-    {% include contact-form.html %}
+    {% include contact-form-2.html %}
 </div>
 <!-- /.content-wrapper -->
 
