set container background class to bg-light uniformly across site

--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -2,7 +2,7 @@
 {% assign current_page = site.data.pageconfig %}
 {% assign config = current_page.index %}
 {% if config.mode == "live" %}
-  <header class="wrapper bg-soft-primary">
+  <header class="wrapper bg-light">
     <nav class="navbar navbar-expand-lg classic transparent navbar-light">
       <div class="container flex-lg-row flex-nowrap align-items-center">
         <div class="navbar-brand w-100">
