revised contact us cta

--- a/_includes/contact-form-2.html
+++ b/_includes/contact-form-2.html
@@ -2,7 +2,7 @@
     <div class="container py-14 py-md-12">
       <div class="row" data-cues="slideInDown" data-group="page-title" data-delay="100">
         <div class="text-center col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-            <h3 class="display-4 mb-9 px-xl-11">Book a free consultation; expect a reply within 1 business day 🎯</h3>
+            <h3 class="display-4 mb-9 px-xl-11">Need help with a <span class="underline-3 style-2 yellow">Data</span> or <span class="underline-3 style-2 green">Cloud</span> use-case? Get in touch today 🤝</h3>
         </div>
         <div class="row" data-cues="slideInDown" data-group="page-title" data-delay="100">
           <div class="text-center col-md-10 offset-md-1 col-lg-8 offset-lg-2">
