--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <meta name="author" content="elemis">
+  <meta name="description" content="{{ site.company_description }}">
+  <meta name="keywords" content="data intelligence, enterprise ai, hybrid cloud computing, fintech, process automation">
+  <meta name="author" content="AxOps">
   <link rel="shortcut icon" href="{{ site.favicon }}">
   <link rel="stylesheet" href="{{ site.url }}/assets/css/plugins.css">
   <link rel="stylesheet" href="{{ site.url }}/assets/css/style.css">
